--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "scripts": {
+    "test": "xo && ava"
+  },
   "dependencies": {
-    "alfy": "^0.2.0",
-    "got": "^6.3.0"
+    "alfy": "^0.2.0"
+  },
+  "devDependencies": {
+    "alfy-test": "^0.2.0",
+    "ava": "*",
+    "xo": "*"
   }
 }
