--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>name</key>
+    <string>ng2</string>
 	<key>bundleid</key>
 	<string>com.samverschueren.ng2</string>
 	<key>category</key>
