--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "alfy"
   ],
   "dependencies": {
-    "alfy": "^0.6.0"
+    "alfy": "^0.6.0",
+    "lodash.uniqwith": "^4.5.0"
   },
   "devDependencies": {
     "alfy-test": "^0.3.0",
